--- a/src/components/Map/index.scss
+++ b/src/components/Map/index.scss
@@ -1,9 +1,11 @@
-#allmap {
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 100%;
-    height: 100%;
-    margin:0;
-    z-index: 3;
+.map-wrapper {
+    #allmap {
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        width: 80%;
+        height: 92%;
+        margin:0;
+        z-index: 3;
+    }
 }
